--- a/Crimefest.html
+++ b/Crimefest.html
@@ -11,12 +11,16 @@ god during these weeks. It is one of the most important holidays in the Church o
  course. Festivities occur in major cities and where the influence of Almirism is strong. Many heathens do not know the
  name of Almir. Crimefest is a time to spread his word of his glory. Prominent members of the Almirism community go door to door 
  spreading the gospel of Almir.
-They show the pitiful heathens and pagans that Almir is the true god. They show that Yung Lean is the true messiah.</p></div></body>
+They show the pitiful heathens and pagans that Almir is the true god. They show that Yung Lean is the true messiah.</p>
+Crimefest is much like <a href= "thesales.html">The Sales</a></div></body>
+<div class= "linkscrimefest">
 <h2> <u> The Gospel of Tight </u> </h2>
+
 <ol> 
 <li> <a href= "Tightest crew site.html"> Home </a> </li>
 <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
-  <li><a href= "A prayer.html"> Prayer to Almir </a></li>
+  <li><a href= "A prayer.html"> Prayer to Almir </a></li></div>
+  </body>
 </html>
