--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -11,13 +11,15 @@
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
 <li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>  </ol>
+
 <p> 
 
  <h3> <u> Unrelated Sites That I made</u> </h3>
   <ol> <li><a href= "nam.html"> Back In Nam </a></li>
    <li> <a href= "nine.html"> I don't know why I made this</a> </li> </ol>
   </p></div>
-<div class = "bordera"><h2><u> Who are we? </u></h2>
+
+<div class = "borderamain"><h2><u> Who are we? </u></h2>
 <p> We are the tightest crew ever. Nobody has anything on us. We are the tightest in the world. Nobody is tighter than the tightest crew.
 We are the original tightest crew. Been tight since my first night, of my life. You could never even dream of being this tight. The amount of 
 tightness may seem impossible to the regular human brain. Our tightness is a paradox, wrapped in a riddle tightly, and enshrouded tightly in an enigma.
@@ -30,7 +32,7 @@ One does not become a tightest crew, you are either born into it, or become one 
 <div class="border2main"><h2><strong><u> The Code of the Tightest Crew </u></strong></h2> <p><strong>"Tighthood is Knighthood. Tight for life. Never forgetti. Tightness brings 
 brightness. Tight for life. Never forgetti. Knees weak arms are heavy. On the surface he looks nervous but he's calm and ready. There's vomit on his 
 sweater already. Mom's spaghetti. </strong></p></div>
-<div class = "border3"><h2> <strong><u> Becoming one of the Tightest Crew </u></strong></h2> 
+<div class = "border3main"><h2> <strong><u> Becoming one of the Tightest Crew </u></strong></h2> 
 <p>One does not become a tightest crew easily, you must prove your courage, bravery and prowess in battle to one of the senior "Tightmasters".
  We were born to be tight, trained from infancy by tibetan monks the art of the tightest crew. Taken away from our parents at birth and taught the
  way of the tight.
@@ -52,9 +54,15 @@ they are together. If they are all wearing matching avaitor shades, they recieve
  atching avaitors. Doctor Swifto may be the most senior tightmaster, but Almir Listo is 10000000000 times tighter than him. That makes Almir 
  10000000000  times tighter than the tightest person from the tightest crew in the universe.
 </p></div>
-
+  <div class="listmain"><h2> <u> The Tightest Crew </u></h2>
+<ul> <li> Almir Listo </li>
+<li> Godd Howard</li>
+<li> Yung Lean </li>
+<li>Doctor Swifto </li>
+<li>BustANutOnTheCoach </li>
+<li>Ravenous Bear Cub </li> </ul></div>
 <img src= "photos/tight.jpg"/>
-<div class="border4"><p> Tightmasters are amazing drivers, serving as escape drivers and real human beans. After hours on end of radiation exposure from radiating 
+<div class="border4main"><p> Tightmasters are amazing drivers, serving as escape drivers and real human beans. After hours on end of radiation exposure from radiating 
 tightness, and sometimes carrying nuclear bombs around casually with their inhuman strength, tightmasters almost have superpowers. Such as mentioned 
 before, with yelling at people to heal wounds. They are amazing drivers, and can drive even when their eyes are completely covered. They can 
 drift and are masters of driving 2fast2qwik. The tight usually travel in groups of 4, as that is all they need.
@@ -67,14 +75,7 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
  You must train among the tight, day and night until you reach that level of tightness. It could take months of years of training in the tight 
  monastery in Havre De Grace, Maryland. The school of the tight is located there. The tight monastery was founded by the tightest man alive Doctor
  Swifto. But Almir is the tightest entity ever.</p></div>
-<p> By William Luzzatto on 9/22/2015, tight for life </p>
-<h2> <u> People in the Order of Tightness </u></h2>
-<ul> <li> Almir Listo </li>
-<li> Godd Howard</li>
-<li> Yung Lean </li>
-<li>Doctor Swifto </li>
-<li>BustANutOnTheCoach </li>
-<li>Ravenous Bear Cub </li> </ul>
+<div class= "name"<p> By William Luzzatto on 9/22/2015, tight for life. </p></div>
 
 
 <img src= "photos/koala.jpg"/>
