--- a/A prayer.html
+++ b/A prayer.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
+<div class= "borderprayer"><h1><u> A Prayer</u> <title> A Prayer</title> </h1> </head></div>
+
+<body> 
 <div class= "linksprayer"><ol><li> <a href= "Tightest crew site.html"> Home </a> </li>
   <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
    <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
 <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li>
-<li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>
-<div class= "borderprayer"><h1><u> A Prayer</u> <title> A Prayer</title> </h1> </head></div>
-<body> 
-<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
+<li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li></div>
+
 <div class= "prayer">
 <p>  <strong>O</strong>ur Almir,
 <strong>W</strong>ho resides in steam wallets above,
