--- a/Almir.html
+++ b/Almir.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<h1><u> The Creation of the Universe </u> <title> The Creation of the Universe</title> </h1> </head>
-<body> 
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<h2> <u> In the beginning</u> </h2>
-<p> In the beginning there was nothing, but Almir Listo. All was dark, no light to be seen. On the first day, Almir created light, dark and DLC. The good was light, dark was bad, and DLC was everywhere.</p>
+<div class ="almir1"><h1><u> The Creation of the Universe </u> <title> The Creation of the Universe</title> </h1> </head></div>
+<body> 
+
+<div class ="almir1"><h2> <u> In the beginning</u> </h2><div>
+<div class ="almir"><p> In the beginning there was nothing, but Almir Listo. All was dark, no light to be seen. On the first day, Almir created light, dark and DLC. The good was light, dark was bad, and DLC was everywhere.</p>
 
 <p> On the second day, Almir created Tightness, a component that made life great. Tightness is brightness. Brightness is good.</p>
  <img src= "photos/tight.jpg"/>
 <p> On the thrird day, Almir created the earth, the universe, animals, plants , water and the sky. He was tired as hell. So he went to bed and slept for 3 days straight on his huge fluffy beard. </p>
 <p> He woke up on the sixth day and said "What the hell happened, was I roofied?" So he made everything else. He was really sore. Also he created a man and a women and caused alot of scientific contrevoursey.</p>
 <p> On the seventh day he procreated with a human woman, creating Yung Lean. Yung Lean was a real human bean. Half man, half DLC.</p>
-<p> Almir protected mankind, making sure that there was always tightness to spare. He did not create DLC until Yung Lean passed away. But that's a story for another day. </p>
- <a href= "Tightest crew site.html"> Home </a> 
-<ol>
+<p> Almir protected mankind, making sure that there was always tightness to spare. He did not create DLC until Yung Lean passed away. But that's a story for another day. </p></div>
+<div class ="linksmain"> <a href= "Tightest crew site.html"> Home </a> 
+<h2> <u> The Gospel of Tight </u> </h2>
+<ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
- <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li>
- <li><a href= "A prayer.html"> Prayer to Almir </a></li></ol>
-
+ <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
+  <li><a href= "A prayer.html"> Prayer to Almir </a></li>
+<li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>  
+<li><a href="gaben.html">Gaben</a></li>
+<li> <a href="thesales.html">The Sales; A holiday of Gaben</a></ol>
 
 </body>
 </html>
