--- a/Crimefest.html
+++ b/Crimefest.html
@@ -12,7 +12,7 @@ god during these weeks. It is one of the most important holidays in the Church o
  name of Almir. Crimefest is a time to spread his word of his glory. Prominent members of the Almirism community go door to door 
  spreading the gospel of Almir.
 They show the pitiful heathens and pagans that Almir is the true god. They show that Yung Lean is the true messiah.</p>
-Crimefest is much like <a href= "thesales.html">The Sales</a></div></body>
+Crimefest is much like <a href= "thesales.html">The Sales</a> that happen every season. During the sales </div></body>
 <div class= "linkscrimefest">
 <h2> <u> The Gospel of Tight </u> </h2>
 
