--- a/godd.html
+++ b/godd.html
@@ -23,6 +23,9 @@ Almir ain't payin' no child support. Despite never paying child support to his b
  
  <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
-  <li><a href= "A prayer.html"> Prayer to Almir </a></li> </ol>
+  <li><a href= "A prayer.html"> Prayer to Almir </a></li> 
+<li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>  
+<li><a href="gaben.html">Gaben</a></li>
+<li> <a href="thesales.html">The Sales; A holiday of Gaben</a></ol>
 </body>
 </html>
