--- a/A prayer.html
+++ b/A prayer.html
@@ -9,7 +9,9 @@
   <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
    <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
 <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li>
-<li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li></div>
+<li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>
+<li><a href="gaben.html">Gaben</a></li>
+<li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li></ol></div>
 
 <div class= "prayer">
 <p>  <strong>O</strong>ur Almir,
