--- a/Almir.html
+++ b/Almir.html
@@ -4,8 +4,9 @@
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 <div class ="almir1"><h1><u> The Creation of the Universe </u> <title> The Creation of the Universe</title> </h1> </head></div>
 <body> 
-<div class ="linkalmir"> <a href= "Tightest crew site.html"> Home </a> 
+<div class ="linkalmir"> 
 <h2> <u> The Gospel of Tight </u> </h2>
+<a href= "Tightest crew site.html"> Home 
 <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
