--- a/Crimefest.html
+++ b/Crimefest.html
@@ -3,8 +3,19 @@
 <head><link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 <div class ="crimefest"><h1><u> Crimefest </u> <title> Crimefest</title> </h1> </head></div>
 <body> 
+<div class= "linkscrimefest">
+<h2> <u> The Gospel of Tight </u> </h2>
+ <a href= "Tightest crew site.html"> Home </a> 
 
-<div class="info2"><p> Crimefest is a holiday celebrating the worship of Almir, and the life of Yung Lean. 
+<ol> 
+
+<li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
+ <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
+ <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
+  <li><a href= "A prayer.html"> Prayer to Almir </a></li>
+  <li><a href="gaben.html">Gaben</a></li>
+<li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li></ol></div>
+<div class="info2"><p><h3> Crimefest is a holiday celebrating the worship of Almir, and the life of Yung Lean. 
 It is a holiday that lasts several weeks in October. During crimefest, 
 Almir showers his worshipers with love and DLC. Almir worshipers and Rabi of the Synagogue of DLC alike worship the 
 god during these weeks. It is one of the most important holidays in the Church of Almir, besides the birth of Yung Lean of
@@ -12,15 +23,7 @@ god during these weeks. It is one of the most important holidays in the Church o
  name of Almir. Crimefest is a time to spread his word of his glory. Prominent members of the Almirism community go door to door 
  spreading the gospel of Almir.
 They show the pitiful heathens and pagans that Almir is the true god. They show that Yung Lean is the true messiah.</p>
-Crimefest is much like <a href= "thesales.html">The Sales</a> that happen every season. During the sales </div></body>
-<div class= "linkscrimefest">
-<h2> <u> The Gospel of Tight </u> </h2>
+Crimefest is much like <a href= "thesales.html">The Sales</a> that happen every season. During the sales Gaben speads his sales. During crimefest, Almir spreads his DLC.</h3></p></div></body>
 
-<ol> 
-<li> <a href= "Tightest crew site.html"> Home </a> </li>
-<li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
- <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
- <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
-  <li><a href= "A prayer.html"> Prayer to Almir </a></li></div>
   </body>
 </html>
