--- a/thesales.html
+++ b/thesales.html
@@ -3,14 +3,16 @@
 <head><link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 <div class ="thesales"><h1><u> The Sales </u> <title> The Sales</title> </h1> </head></div>
 <body> 
-<div class ="linksmain"><h2> <u> The Gospel of Tight </u> </h2>
+<div class ="linksmain">
+<a href= "Tightest crew site.html"> Home </a> 
+<h2> <u> The Gospel of Tight </u> </h2>
 <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
 <li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>  
 <li><a href="gaben.html">Gaben</a></li> </body></div>
-<div class="thesales2"> <p>Every season, Non-tight come together to worship during the sales. The Sales are 
+<div class="thesales2"> <p><h3>Every season, Non-tight come together to worship during the sales. The Sales are 
 a seasonal holiday celebrating the seasonal sales given by Gaben. Much like<a href="crimefest.html"> Crimefest
 </a>, how it celebrates blessings given by a deity.
 During the sales, Gaben showers us with video games, lowering the prices so that people may buy more. This money, 
@@ -20,7 +22,7 @@ As, Gaben is rather overweight, and is always hungry. The sales is an oppurtunit
  He tries as much as he can to stop the foul beast by not letting the sales take too much off, but Gaben still 
  profits. Almir tries to make sure he makes as much money as possible, rightly so, so he can patch the black hole of Yung Lean's tightness.
  Gaben is the least tightest thing ever, his body is large and not compressed. Therefore he is not tight at all, in fact he is loose.
- Every sale he becomes more loose(less tight).</P></div>
+ Every sale he becomes more loose(less tight).</h3></P></div>
 </body>
 
  </html>
