counter strike source

--- a/yung lean.html
+++ b/yung lean.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-<h1><u> The Story of Yung Lean </u> <title> The Story of Yung Lean </title> </h1> </head>
-<body> 
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<h2> <u> Early life </u> </h2>
+<div class="thestory"><h1><u> The Story of Yung Lean </u> <title> The Story of Yung Lean </title> </h1> </head></div>
+<body> 
+ <div class ="linksmain"><h2> <u> The Gospel of Tight </u> </h2>
+<a href= "Tightest crew site.html"> Home </a> 
+
+<ol> 
+
+<li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
+ <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
+  <li><a href= "A prayer.html"> Prayer to Almir </a></li>
+  <li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>
+  <li><a href="gaben.html">Gaben</a></li>
+<li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li></ol></div>
+
+<div class="earlylife"><h2> <u> Early life </u> </h2>
 <p> Yung lean is a sort of demigod. Born half human, half DLC. Yung lean is the son of Almir Listo. He was born to a virgin mother, much like jesus.
  Almir told Yung Lean's mother that she was having a holy child. It was immediately evident when Yung Lean was born, that he was he was destined to be one of the tightest men alive.
- His tightness came from his father, Almir. Because Almir is the tightest entity in existence, it makes sense that Yung Lean would be the tightest human. </p>
-<h2> <u> Worship </u> </h2> 
+ His tightness came from his father, Almir. Because Almir is the tightest entity in existence, it makes sense that Yung Lean would be the tightest human. </p></div>
+<div class="earlylife"><h2> <u> Worship </u> </h2> 
 <p> Because of Yung Lean's tightness, he developed a great following. And a religion was formed. Merged with the Church of Almir, Tightism was Created.
 Yung Lean had followers kissing the ground on which he stood upon. His followers would do anything for him. For years, the tightest crew have 
-tried to be most Yung-Lean-like. Striving to reach the level at which Yung Lean's tightness level was. Yung Lean would hang out with the un-tight, and teach them the way of the tight. </p>
- <img src= "photos/tight.jpg"/>
-<p> Despite having such a large following he still felt lonely. As he said in his platinum record "Yoshi City", "I'm a lonely clown with my
- windows down, I'm a lonely lonely". </P>
- <h2> <u> The Fate of Yung Lean </u> </h2>
+tried to be most Yung-Lean-like. Striving to reach the level at which Yung Lean's tightness level was. Yung Lean would hang out with the un-tight, and teach them the way of the tight. </p></div>
+<div class="earlylife2"> <p> Despite having such a large following he still felt lonely. As he said in his platinum record "Yoshi City", "I'm a lonely clown with my
+ windows down, I'm a lonely lonely". </P></div>
+<div class="earlylife"> <h2> <u> The Fate of Yung Lean </u> </h2>
  <p> Yung Lean's tightness ultimately brought his own demise. Yung Lean was so tight that he had his own gravitational pull, and it caused a
  black hole. So much tightness in one spot caused a black hole. And it killed him and 20 other followers. Almir patched the hole with DLC, and if Almir did not stop making DLC, the black hole would open again.
- Moral of the story is that with great power comes great responsibility. And this is why Almir is always making DLC. </p>
-  <a href= "Tightest crew site.html"> Home </a> 
-<ol><li><a href= "Almir.html"> Almir and the Creation of the Universe </a></li>
- <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
- <li><a href= "A prayer.html"> Prayer to Almir </a></li></ol>
+ Moral of the story is that with great power comes great responsibility. And this is why Almir is always making DLC. </p></div>
+ <img src= "photos/tight.jpg"/>
 
  </body>
  </html>
