--- a/gaben.html
+++ b/gaben.html
@@ -21,7 +21,9 @@ A polar opposite to Almir. He is the reason that each season Sales occur. The Sa
  contributing to Yung Lean's hole. If Gaben didn't eat so much, he'd be tighter and less loose. Gaben is the 
  lord of Obesity, Profit, Good and Bad luck, Locksmithing, Crateloading, Weapons, knives, and hats that are on fire. 
  He used to be lord of Video games as well, before he stopped making video games in 2004 with the release of Half
- Life 2.</h3></p></div>
+ Life 2. </h3>
+ </p>
+ <p><h3> Gaben is not tight at all, because he does not release DLC like Almir. Almir is the tightest because he is a master of DLC. He gets even tighter when he makes 1000 DLC per day during Crimefest.</div>
 </body>
 </html>
  
