--- a/godd.html
+++ b/godd.html
@@ -1,9 +1,21 @@
 <!DOCTYPE>
 <html>
-<head> <title> The Story of Godd Howard </title> <h2> The Story of Godd Howard  </h2> </head>
+<head> <div class="titlegodd"><title> The Story of Godd Howard </title> <h2> The Story of Godd Howard  </h2> </head></div>
 <body>
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<p> Godd Howard was a poor sheperd in Bethesda, Maryland USA. He was inpregnated with Almir's child, "Yung Lean". Almir told Godd Howard that he is 
+ <div class ="linksmain"><h2> <u> The Gospel of Tight </u> </h2>
+<a href= "Tightest crew site.html"> Home </a> 
+
+<ol> 
+
+<li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
+ <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
+ <li> <a href= "yung lean.html"> Yung Lean and the story of Almir's DLC</a></li>
+  <li><a href= "A prayer.html"> Prayer to Almir </a></li>
+  <li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>
+  <li><a href="gaben.html">Gaben</a></li>
+<li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li></ol></div>
+<div class="godd"> Godd Howard was a poor sheperd in Bethesda, Maryland USA. He was inpregnated with Almir's child, "Yung Lean". Almir told Godd Howard that he is 
 pregnant with a holy child, and that he would be the tightest human to ever live. Almir told Godd Howard that he is to raise this child and that 
 Almir ain't payin' no child support. Despite never paying child support to his baby daddy/momma, Almir watched over the child and father.</p>
 <p> After a 2014 announcement, and a 2015 release. (Almir said that Yung will come out in 2014, but he came out in 2015.)
@@ -16,16 +28,14 @@ Almir ain't payin' no child support. Despite never paying child support to his b
  He created universes of fantasy, much like Almir. He is a creator in a different type of way. 
  While Almir created the earth, Godd Howard made the earth a desireable place to live. He is a prophet of 
  Almirism, but he is not a diety. Godd Howard is as close to a diety man can become, the closest to godliness. 
- He is the closes a pure human has been to godliness. Yung Lean is the closest a half human-half dlc man has gotten to godliness. </p>
+ He is the closes a pure human has been to godliness. Yung Lean is the closest a half human-half dlc man has gotten to godliness. 
+ </p>
+ <p>He created worlds, where thousands of people would spend time. Adventures, quests, prophecies, and the struggles of men. Magic and secrets that have still never been uncovered. 
+ Alternate universes where culture stopped in the 1950s and technology progressed. Lands where nuclear war had ravaged the landscape, and mutants roam the earth.
+ Ficticious continents with new types of life, new races of man. Worlds where the world was conquered by the Nazi's. Worlds where you are the only hope to save the earth from being devoured. And a world where you have to go to Hell itself (New Jersey) to save the world from being destroyed by Demons.</p>
+ <p> Hundereds of thousands of hours would be taken by these worlds. He would spend years at a time with teams working on these universes, whileas Almir only took 7 days. Godd Howard made very little DLC, if he had made more, he would of likely been up to tier with Almir.
+ </div>
 
- <a href= "Tightest crew site.html"> Home </a> 
-  <h2> <u> The Gospel of Tight </u> </h2>
- 
- <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
- <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
-  <li><a href= "A prayer.html"> Prayer to Almir </a></li> 
-<li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>  
-<li><a href="gaben.html">Gaben</a></li>
-<li> <a href="thesales.html">The Sales; A holiday of Gaben</a></ol>
+
 </body>
 </html>
