--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -8,7 +8,7 @@
 	<div class ="linksmain"><h2> <u> The Gospel of Tight </u> </h2>
 <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
- <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
+ <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
 <li><a href= "crimefest.html"> Crimefest; A holiday of Almir</a></li>  
 <li><a href= "gaben.html">Gaben</a></li>
