--- a/Almir.html
+++ b/Almir.html
@@ -22,8 +22,13 @@
 <p> On the thrird day, Almir created the earth, the universe, animals, plants , water and the sky. He was tired as hell. So he went to bed and slept for 3 days straight on his huge fluffy beard. </p>
 <p> He woke up on the sixth day and said "What the hell happened, was I roofied?" So he made everything else. He was really sore. Also he created a man and a women and caused alot of scientific contrevoursey.</p>
 <p> On the seventh day he procreated with a human woman, creating Yung Lean. Yung Lean was a real human bean. Half man, half DLC.</p>
-<p> Almir protected mankind, making sure that there was always tightness to spare. He did not create DLC until Yung Lean passed away. But that's a story for another day. </p></div>
-
+<p> Almir protected mankind, making sure that there was always tightness to spare. He did not create DLC until Yung Lean passed away. But that's a story for another day. 
+</p>
+</div>
+<div class="almirCrime"><p> During <a href="crimefest.html"> Crimefest</a>,
+ Almir releases 100000 DLC per day, prolonging the patching of Yung Lean's hole for a couple of months. The rest of 
+ the patching comes from shorter spurts during the year. With each DLC release, Almir becomes tighter and the hole of Yung Lean tightens up a little bit. It only tightens Yung Lean's hole for a short while.
+</div>
 
 </body>
 </html>
