--- a/gaben.html
+++ b/gaben.html
@@ -23,7 +23,8 @@ A polar opposite to Almir. He is the reason that each season Sales occur. The Sa
  He used to be lord of Video games as well, before he stopped making video games in 2004 with the release of Half
  Life 2. </h3>
  </p>
- <p><h3> Gaben is not tight at all, because he does not release DLC like Almir. Almir is the tightest because he is a master of DLC. He gets even tighter when he makes 1000 DLC per day during Crimefest.</div>
+ <p><h3> Gaben is not tight at all, because he does not release DLC like Almir. Almir is the tightest because he is a
+ master of DLC. He gets even tighter when he makes 1000 DLC per day during Crimefest. He is super tight. </div>
 </body>
 </html>
  
