--- a/godd.html
+++ b/godd.html
@@ -1,6 +1,6 @@
 <!DOCTYPE>
 <html>
-<head> <div class="titlegodd"><title> The Story of Godd Howard </title> <h2> The Story of Godd Howard  </h2> </head></div>
+<head> <div class="titlegodd"><title> The Story of Godd Howard </title> <h2> <u>The Story of Godd Howard </u> </h2> </head></div>
 <body>
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
  <div class ="linksmain"><h2> <u> The Gospel of Tight </u> </h2>
