--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -77,7 +77,9 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
  You must train among the tight, day and night until you reach that level of tightness. It could take months of years of training in the tight 
  monastery in Havre De Grace, Maryland. The school of the tight is located there. The tight monastery was founded by the tightest man alive Doctor
  Swifto. But Almir is the tightest entity ever.</p></div>
-<div class= "name"<p> By William Luzzatto on 9/22/2015, tight for life. </p></div>
+ <div class="mainforbidden"> <h3><u> Bodily Tightness </u></h3>Female Tightmasters retain their tightness (wink wink nudge nudge) as well as Male 
+ Tightmasters (wink wink nudge nudge) no matter how much they have intercourse. Their bodies remain tight. </p></div> 
+ <div class= "namemain"<p> By William Luzzatto on 9/22/2015, tight for life. </p></div>
 
 
 <img src= "photos/koala.jpg"/>
