--- a/gaben.html
+++ b/gaben.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head><link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<div class ="gaben"><h1><u>Gaben</u> <title>Gaben</title> </h1> </head></div>
+<div class ="gaben"><h1><u>Gaben</u> <title>Gabe Noodle and the Loosest Crew</title> </h1> </head></div>
 <body> 
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 <li> <a href= "Tightest crew site.html"> Home </a> </li>
@@ -12,7 +12,7 @@
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
 <li><a href="Crimefest.html"> Crimefest; A holiday of Almir</a></li>  
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></ol></div>
-<div class="gaben2"><h3><p> Gabe Newell is the founder of valve, he is the least tightest person on the planet. 
+<div class="gaben2"><h3><p> Gabe Noodle is the founder of valve, he is the least tightest person on the planet. 
 A polar opposite to Almir. He is the reason that each season Sales occur. The Sales would be a good thing if he
  did not abuse the money, but he uses the money he earns to gain power. Instead of using it to patch the Black 
  Hole created by Yung lean, Gaben uses it on food to fill the black hole in his stomach. He uses it to gain power. 
@@ -24,7 +24,9 @@ A polar opposite to Almir. He is the reason that each season Sales occur. The Sa
  Life 2. </h3>
  </p>
  <p><h3> Gaben is not tight at all, because he does not release DLC like Almir. Almir is the tightest because he is a
- master of DLC. He gets even tighter when he makes 1000 DLC per day during Crimefest. He is super tight. </div>
+ master of DLC. He gets even tighter when he makes 1000 DLC per day during Crimefest. He is super tight.
+Even though Valves are made to tighten so they stop water flow, Gabe Noodle is the least tightest person on the planet. </div>
+
 </body>
 </html>
  
