--- a/A prayer.html
+++ b/A prayer.html
@@ -10,23 +10,23 @@
    <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
 <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li>
 <li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>
-<li><a href="gaben.html">Gaben</a></li>
+<li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li></ol></div>
 
 <div class= "prayer">
-<p>  <strong>O</strong>ur Almir,
-<strong>W</strong>ho resides in steam wallets above,
-<strong>T</strong>ightest be thy name,
-<strong>O</strong>ur DLC come,
-<strong>O</strong>ur money will be done,
-<strong>O</strong>n Earth in which dlc once was,
-<strong>G</strong>ive us this dlc our daily car 4 mod,
-<strong>A</strong>nd forgive those who are not as tight,
-<strong>A</strong>s we forgive those who try to untighten us,
-<strong>D</strong>eliver us from the realm of gaben below,
-<strong>A</strong>nd lead us not into a black hole of lean,
-<strong>B</strong>ut deliver us from the untight,
-<strong>I</strong>n the name of Almir, Lean, and the tightest tight</p>
+<p>  <strong>O</strong></u>ur Almir,
+<u><strong>W</strong></u>ho resides in steam wallets above,
+<u><strong>T</strong></u>ightest be thy name,
+<u><strong>O</strong></u>ur DLC come,
+<u><strong>O</strong></u>ur money will be done,
+<u><strong>O</strong></u>n Earth in which dlc once was,
+<u><strong>G</strong></u>ive us this dlc our daily car 4 mod,
+<u><strong>A</strong></u>nd forgive those who are not as tight,
+<u><strong>A</strong></u>s we forgive those who try to untighten us,
+<u><strong>D</strong></u>eliver us from the realm of gaben below,
+<u><strong>A</strong></u>nd lead us not into a black hole of lean,
+<u><strong>B</strong></u>ut deliver us from the untight,
+<u><strong>I</strong></u>n the name of Almir, Lean, and the tightest tight</p>
 <img src= "photos/almir listo.jpg"/></div>
 <div class= "tightaf"><img src= "photos/tight.jpg"/></div>
 <div class= "info"><p> After this prayer is said by the Rabi of the local tight synagogue, mass may begin. This prayer is followed by the reading of a passage from the Gospel of Tight, followed by prayer or church hymn.
