--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -11,7 +11,7 @@
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
 <li><a href= "crimefest.html"> Crimefest; A holiday of Almir</a></li>  
-<li><a href= "gaben.html">Gaben</a></li>
+<li><a href= "gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href= "thesales.html">The Sales; A holiday of Gaben</a></ol>
 
 <p> 
@@ -54,7 +54,7 @@ They will be far luckier and have a much higher chance of sucess. If they are al
 they are together. If they are all wearing matching avaitor shades, they recieve a tightness level which is the total tightness of the group
  multiplied by 10000 for each crew member. Each crew member would have the total tight level multiplied by 1000 for themselves while wearing m
  atching avaitors. Doctor Swifto may be the most senior tightmaster, but Almir Listo is 10000000000 times tighter than him. That makes Almir 
- 10000000000  times tighter than the tightest person from the tightest crew in the universe.
+ 10000000000  times tighter than the tightest person from the tightest crew in the universe. Tightmasters ionly wear the tightest suits available. Typically they are made of kevlar, but feel like silk. They cost 200 million dollars. So only the tightest of the tight can afford it.
 </p></div>
   <div class="listmain"><h2> <u> The Tightest Crew </u></h2>
 <ul> <li> Almir Listo </li>
@@ -78,7 +78,7 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
  monastery in Havre De Grace, Maryland. The school of the tight is located there. The tight monastery was founded by the tightest man alive Doctor
  Swifto. But Almir is the tightest entity ever.</p></div>
  <div class="mainforbidden"> <h3><u> Bodily Tightness </u></h3>Female Tightmasters retain their tightness (wink wink nudge nudge) as well as Male 
- Tightmasters (wink wink nudge nudge) no matter how much they have intercourse. Their bodies remain tight. </p></div> 
+ Tightmasters (wink wink nudge nudge) no matter how much they have intercourse. Their bodies remain tight. The Tightmasters get booty tight or untight.</p></div> 
  <div class= "namemain"<p> By William Luzzatto on 9/22/2015, tight for life. </p></div>
 
 
