--- a/A prayer.html
+++ b/A prayer.html
@@ -30,8 +30,8 @@
 <img src= "photos/almir listo.jpg"/></div>
 <div class= "tightaf"><img src= "photos/tight.jpg"/></div>
 <div class= "info"><p> After this prayer is said by the Rabi of the local tight synagogue, mass may begin. This prayer is followed by the reading of a passage from the Gospel of Tight, followed by prayer or church hymn.
-The mass is typically about an hour long. After the hymn, their are prayers. The seats in the synagogue are typically very tight as so to keep the worshipers in tight proximity. This way, they remain as tight as possible.
-The church consists of a Rabi and his helpers. The sessions happen every Sunday and Saturday. As these are the days of the lord. At the end of the service, worshipers donate DLC money to the Church of Almir.</p></div>
+The mass is typically about an hour long. After the hymn, their are prayers. The seats in the synagogue are typically very tight as so to keep the worshippers in tight proximity. This way, they remain as tight as possible.
+The church consists of a Rabi and his helpers. The sessions happen every Sunday and Saturday. As these are the days of the lord. At the end of the service, worshippers donate DLC money to the Church of Almir.</p></div>
 
 
 
