--- a/thesales.html
+++ b/thesales.html
@@ -11,7 +11,7 @@
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
-<li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>  
+<li><a href="crime.html"> Crimefest; A holiday of Almir</a></li>  
 <li><a href="gaben.html"> Gabe Noodle and the Loosest Crew</a></li> </body></div>
 <div class="thesales2"> <p><h3>Every season, Non-tight come together to worship during the sales. The Sales are 
 a seasonal holiday celebrating the seasonal sales given by Gaben. Much like<a href="crimefest.html"> Crimefest
