--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -10,7 +10,7 @@
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
-<li><a href= "crimefest.html"> Crimefest; A holiday of Almir</a></li>  
+<li><a href= "crime.html"> Crimefest; A holiday of Almir</a></li>  
 <li><a href= "gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href= "thesales.html">The Sales; A holiday of Gaben</a></ol>
 
