--- a/yung lean.html
+++ b/yung lean.html
@@ -12,7 +12,7 @@
 <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
-  <li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>
+  <li><a href="crime.html"> Crimefest; A holiday of Almir</a></li>
   <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li></ol></div>
 
