--- a/gaben.html
+++ b/gaben.html
@@ -11,6 +11,7 @@
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
 <li><a href="Crime.html"> Crimefest; A holiday of Almir</a></li>  
+<li><a href= "gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></ol></div>
 <div class="gaben2"><h3><p> Gabe Noodle is the founder of valve, he is the least tightest person on the planet. 
 A polar opposite to Almir. He is the reason that each season Sales occur. The Sales would be a good thing if he
