--- a/crime.html
+++ b/crime.html
@@ -11,7 +11,7 @@
 
 <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
- <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
+ <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
   <li><a href= "crime.html"> Crimefest; A holiday of Almir</a></li>  
   <li><a href="gaben.html">Gaben</a></li>
