--- a/A prayer.html
+++ b/A prayer.html
@@ -5,8 +5,10 @@
 <div class= "borderprayer"><h1><u> A Prayer</u> <title> A Prayer</title> </h1> </head></div>
 
 <body> 
-<div class= "linksprayer"><ol><li> <a href= "Tightest crew site.html"> Home </a> </li>
-  <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
+<div class= "linksprayer">
+<h2> <u> The Gospel of Tight </u> </h2>
+ <a href= "Tightest crew site.html"> Home </a> 
+ <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
    <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
 <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li>
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
