--- a/gaben.html
+++ b/gaben.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head><link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<div class ="gaben"><h1><u>Gaben</u> <title>Gabe Noodle and the Loosest Crew</title> </h1> </head></div>
+<div class ="gaben"><h1><u>Gabe Noodle and the Loosest Crew</u> <title>Gabe Noodle and the Loosest Crew</title> </h1> </head></div>
 <body> 
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<li> <a href= "Tightest crew site.html"> Home </a> </li>
+
 	<div class ="linksmain"><h2> <u> The Gospel of Tight </u> </h2>
+	 <a href= "Tightest crew site.html"> Home </a> 
 <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li> 
