--- a/A prayer.html
+++ b/A prayer.html
@@ -17,12 +17,12 @@
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li></ol></div>
 
 <div class= "prayer">
-<p>  <strong>O</strong></u>ur Almir,
+<p><u><strong>O</strong></u>ur Almir,
 <u><strong>W</strong></u>ho resides in steam wallets above,
 <u><strong>T</strong></u>ightest be thy name,
-<u><strong>O</strong></u>ur DLC come,
+<u><strong>O</strong></u>ur dlc come,
 <u><strong>O</strong></u>ur money will be done,
-<u><strong>O</strong></u>n Earth in which dlc once was,
+<u><strong>O</strong></u>n Earth in which DLC once was,
 <u><strong>G</strong></u>ive us this dlc our daily car 4 mod,
 <u><strong>A</strong></u>nd forgive those who are not as tight,
 <u><strong>A</strong></u>s we forgive those who try to untighten us,
