--- a/gaben.html
+++ b/gaben.html
@@ -27,7 +27,11 @@ A polar opposite to Almir. He is the reason that each season Sales occur. The Sa
  </p>
  <p><h3> Gaben is not tight at all, because he does not release DLC like Almir. Almir is the tightest because he is a
  master of DLC. He gets even tighter when he makes 1000 DLC per day during Crimefest. He is super tight.
-Even though Valves are made to tighten so they stop water flow, Gabe Noodle is the least tightest person on the planet. </div>
+Even though Valves are made to tighten so they stop water flow, Gabe Noodle is the least tightest person on the planet.
+<p> Gaben rules a realm called New Jersey, which is the realm that sinners against Almir go when they die. 
+There are Biblical stories of Doctor Swifto going to New Jersey to rescue those damned to New Jersey. Fighting the free to plays and resisting the urge to buy keys.
+New Jersey is a realm of locks and keys. The keys cost $2.50 each. Doctor Swifto fought many horrors in New Jersey. Even Gaben himself. </P>
+ </div>
 
 </body>
 </html>
