crime all the time

--- a/thesales.html
+++ b/thesales.html
@@ -15,7 +15,7 @@
 <li><a href="gaben.html"> Gabe Noodle and the Loosest Crew</a></li> 
 <li> <a href= "thesales.html">The Sales; A holiday of Gaben</a></ol></div>
 <div class="thesales2"> <p><h3>Every season, Non-tight come together to worship during the sales. The Sales are 
-a seasonal holiday celebrating the seasonal sales given by Gaben. Much like<a href="crimefest.html"> Crimefest
+a seasonal holiday celebrating the seasonal sales given by Gaben. Much like<a href="crime.html"> Crimefest
 </a>, how it celebrates blessings given by a deity.
 During the sales, Gaben showers us with video games, lowering the prices so that people may buy more. This money, 
 instead of going into the Black Hole of Yung Lean, goes into the Black Whole of Gaben's stomach. 
