--- a/Almir.html
+++ b/Almir.html
@@ -25,7 +25,7 @@
 <p> Almir protected mankind, making sure that there was always tightness to spare. He did not create DLC until Yung Lean passed away. But that's a story for another day. 
 </p>
 </div>
-<div class="almirCrime"><p> During <a href="crimefest.html"> Crimefest</a>,
+<div class="almirCrime"><p> During <a href="crime.html"> Crimefest</a>,
  Almir releases 100000 DLC per day, prolonging the patching of Yung Lean's hole for a couple of months. The rest of 
  the patching comes from shorter spurts during the year. With each DLC release, Almir becomes tighter and the hole of Yung Lean tightens up a little bit. It only tightens Yung Lean's hole for a short while.
 </div>
