--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -79,7 +79,15 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
  Swifto. But Almir is the tightest entity ever.</p></div>
  <div class="mainforbidden"> <h3><u> Bodily Tightness </u></h3>Female Tightmasters retain their tightness (wink wink nudge nudge) as well as Male 
  Tightmasters (wink wink nudge nudge) no matter how much they have intercourse. Their bodies remain tight. The Tightmasters get booty tight or untight.</p></div> 
+ <div class="vidya"> <h3><u> Places of Operation and Avoided Places </u></h3> Tightmasters mostly operate in several different places. Washington DC, Havre De Grace
+ Maryland, Payday 2, CSGO, Rocket League, Rust, CS;S, Dirty Bomb, Left 4 Dead, any co-op game, Payday:The Hiest, Garry's Mod, and in Vietnam. Only on the worst of circumstances do Tightmasters go to New Jersey. It is the loosest place on earth and danger is around every corner.
+ They do not want to fall prey to the Orange Plague of South Jersey. Or to be shot by Jews in the rest of the state. They are very cautious while in New Jersey.
+ Baltimore is regarded with the same status, it is avoided at all costs like New Jersey. New Jersey is the land of the dead, the portal to Gaben's Money Black Hole. Only Doctor Swifto and Ye Olde Buttcheeks have survived trips to South Jersey. Fighting off those infected with the Orange Plague.
+ Southern Jersey is ravaged by plague and natural disasters on a weekly basis, while as Northern New Jersey has been drained of money completely by 
+ Gabe Newell and the jews that live there. There is only poverty and despair in Northern New Jersey. It's like the worst parts of NYC just its the
+ whole Northern part of the state. Doctor Swifto stated in an official interview that New Jersey is worse than vietnam. It is a warzone, Jewish mobsters shooting eachother as well as other people from the ghetto. Snipers in windows, famine and disease spread rampant. It is a comepletely Almirless state.</div>
  <div class= "namemain"<p> By William Luzzatto on 9/22/2015, tight for life. </p></div>
+ 
 
 
 <img src= "photos/koala.jpg"/>
