--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -85,7 +85,7 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
  Baltimore is regarded with the same status, it is avoided at all costs like New Jersey. New Jersey is the land of the dead, the portal to Gaben's Money Black Hole. Only Doctor Swifto and Ye Olde Buttcheeks have survived trips to South Jersey. Fighting off those infected with the Orange Plague.
  Southern Jersey is ravaged by plague and natural disasters on a weekly basis, while as Northern New Jersey has been drained of money completely by 
  Gabe Newell and the jews that live there. There is only poverty and despair in Northern New Jersey. It's like the worst parts of NYC just its the
- whole Northern part of the state. Doctor Swifto stated in an official interview that New Jersey is worse than vietnam. It is a warzone, Jewish mobsters shooting eachother as well as other people from the ghetto. Snipers in windows, famine and disease spread rampant. It is a comepletely Almirless state.</div>
+ whole Northern part of the state. Doctor Swifto stated in an official interview that New Jersey is worse than vietnam. It is a warzone, Jewish mobsters shooting eachother as well as other people from the ghetto. Snipers in windows, famine and disease spread rampant. It is a comepletely Almirless state. War is hell.</div>
  <div class= "namemain"<p> By William Luzzatto on 9/22/2015, tight for life. </p></div>
  
 
