new jersey underline strong

--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -79,8 +79,8 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
  Swifto. But Almir is the tightest entity ever.</p></div>
  <div class="mainforbidden"> <h3><u> Bodily Tightness </u></h3>Female Tightmasters retain their tightness (wink wink nudge nudge) as well as Male 
  Tightmasters (wink wink nudge nudge) no matter how much they have intercourse. Their bodies remain tight. The Tightmasters get booty tight or untight.</p></div> 
- <div class="vidya"> <h3><u> Places of Operation and Avoided Places </u></h3> Tightmasters mostly operate in several different places. Washington DC, Havre De Grace
- Maryland, Payday 2, CSGO, Rocket League, Rust, CS;S, Dirty Bomb, Left 4 Dead, any co-op game, Payday:The Hiest, Garry's Mod, and in Vietnam. Only on the worst of circumstances do Tightmasters go to New Jersey. It is the loosest place on earth and danger is around every corner.
+ <div class="vidya"> <h3><u> Places of Operation and Avoided Places </u></h3> Tightmasters mostly operate in several different places. <strong>Havre De Grace
+ Maryland, Payday 2, CSGO, Rocket League, Rust, CS;S, Dirty Bomb, Left 4 Dead, any co-op game, Payday:The Hiest, and Garry's Mod</strong>. Only on the worst of circumstances do Tightmasters go to<strong><u> New Jersey</u></strong>. It is the loosest place on earth and danger is around every corner.
  They do not want to fall prey to the Orange Plague of South Jersey. Or to be shot by Jews in the rest of the state. They are very cautious while in New Jersey.
  Baltimore is regarded with the same status, it is avoided at all costs like New Jersey. New Jersey is the land of the dead, the portal to Gaben's Money Black Hole. Only Doctor Swifto and Ye Olde Buttcheeks have survived trips to South Jersey. Fighting off those infected with the Orange Plague.
  Southern Jersey is ravaged by plague and natural disasters on a weekly basis, while as Northern New Jersey has been drained of money completely by 
