--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -12,7 +12,18 @@
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
 <li><a href= "crime.html"> Crimefest; A holiday of Almir</a></li>  
 <li><a href= "gaben.html">Gabe Noodle and the Loosest Crew</a></li>
-<li> <a href= "thesales.html">The Sales; A holiday of Gaben</a></ol>
+<li> <a href= "thesales.html">The Sales; A holiday of Gaben</a></li>
+<li> <a href="grumio.html">Grumio</a></li></ol>
+<h2> Passages </h2> <ol> 
+<li> <a href="grumio.html">Grumio</a></li>
+<li> <a href="swifto.html"> Doctor Swifto (not done)</a></li>
+<li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
+<li> <a href="yeolde.html"> Ye Olde Buttcheeks (not done)</a></li>
+<li> <a href="dallas.html"> Dallas the Dollar Grabber(not done)</a></li>
+<li> <a href="barack.html"> Barack Obama (not done)</a></li>
+<li> <a href="damon.html"> Matt Damon (not done)</a> </li>
+
+
 
 <p> 
 
