--- a/Almir.html
+++ b/Almir.html
@@ -13,7 +13,8 @@
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
 <li><a href="crime.html"> Crimefest; A holiday of Almir</a></li>  
 <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
-<li> <a href="thesales.html">The Sales; A holiday of Gaben</a></ol></div>
+<li> <a href="thesales.html">The Sales; A holiday of Gaben</a>
+<li> <a href="grumio.html">Grumio</a></li></ol></div>
 <div class ="almir2"><h2> <u> In the beginning</u> </h2></div>
 <div class ="almir3"><p> In the beginning there was nothing, but Almir Listo. All was dark, no light to be seen. On the first day, Almir created light, dark and DLC. The good was light, dark was bad, and DLC was everywhere.</p>
 
