--- a/thesales.html
+++ b/thesales.html
@@ -13,7 +13,8 @@
   <li><a href= "A prayer.html"> Prayer to Almir </a></li>
 <li><a href="crime.html"> Crimefest; A holiday of Almir</a></li>  
 <li><a href="gaben.html"> Gabe Noodle and the Loosest Crew</a></li> 
-<li> <a href= "thesales.html">The Sales; A holiday of Gaben</a></ol></div>
+<li> <a href= "thesales.html">The Sales; A holiday of Gaben</a></li>
+<li> <a href="grumio.html">Grumio</a></li></ol></div>
 <div class="thesales2"> <p><h3>Every season, Non-tight come together to worship during the sales. The Sales are 
 a seasonal holiday celebrating the seasonal sales given by Gaben. Much like<a href="crime.html"> Crimefest
 </a>, how it celebrates blessings given by a deity.
