--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -14,7 +14,7 @@
 <li><a href= "gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href= "thesales.html">The Sales; A holiday of Gaben</a></li>
 <li> <a href="grumio.html">Grumio</a></li></ol>
-<h2> Passages </h2> <ol> 
+<h2><u> <strong> Other Prophets </strong></u></h2> <ol> 
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="swifto.html"> Doctor Swifto (not done)</a></li>
 <li> <a href="ryan.html"> Ryan Gosling (not done)</a></li>
