--- a/grumio.html
+++ b/grumio.html
@@ -18,7 +18,7 @@
 <li> <a href="grumio.html">Grumio</a></li></ol></div>
 <div class="earlylife">
 <h2> <strong> <u>Grumio</u></strong></h2> <p> Grumio is a pivotal character in Almirish Mythology. In 79 AD, Grumio was one of the Tightest humans alive. This is only 79 years 
-after Yung Lean was born. He was a slave in Pompeii owned by a banker named Caecilius. He was one of the few survivors of the eruption at pompeii.
+after Yung Lean was born. He was a slave in Pompeii owned by a banker named Caecilius. He was one of the few survivors of the eruption of Mount Vesuvius.
 Grumio was granted his surival after he fought off an army of rabit-rat-dogs and rescued his whole family, Caecilius's family and slaves, and his lover Poppea.
 The only non-friend of Grumio to survive pompeii was a slave trader named Syphax who was always fondeling his hands and had a unibrow and turban. 
 Basically a racist stereotype of middle eastern people. </p>
