--- a/grumio.html
+++ b/grumio.html
@@ -24,7 +24,7 @@ The only non-friend of Grumio to survive pompeii was a slave trader named Syphax
 Basically a racist stereotype of middle eastern people. </p>
 <p> Grumio is one of the best cooks in the world. Along with Robbaz, Ainsley Harriot, and Guy Fieri. He would spend all day pleasing all the women in his life (wink wink). He was drunk alot, and had alot of action in the bedroom. After all, who can avoid his gaze.
 Grumio ruled all of Greece and Rome and led 300 warriors to fight rabid-rat-dogs with only frying pans.</p>
-<p> Grumio is the main character in the Holy Book of Cambridge Latin textbook 1. The Cambridge Latin Textbook is one of the great Texts of Tightism. Grumio is one of the many prophets of the tight. As he is the king of dank tight pussy. And he has one of the tightest rectums ever.</p>
+<p> Grumio is the main character in the Holy Book of Cambridge Latin textbook 1. The Cambridge Latin Textbook is one of the great Texts of Tightism. Grumio is one of the many prophets of the tight. As he is the king of dank tight pussy. Grumio has one of the tightest rectums in recorded history, this, and Grumio's beard, are the sources of his tightness.</p>
 <img src="photos/grumio.jpg">
 <img src="photos/grumio2.jpg">
 
