shit ton of changes

--- a/prophets.html
+++ b/prophets.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<div class= "borderprayer"><h1><u> Branches </u> <title>Branches</title> </h1> </head></div>
+<div class= "borderprayer"><h1><u> Branches and Prophets</u> <title>Branches and Prophets</title> </h1> </head></div>
 
 <body> 
 <div class= "linksprayer">
@@ -15,6 +15,7 @@
 <li><a href="crime.html"> Crimefest; A holiday of Almir</a></li>
 <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
+<li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
 <li> <a href="grumio.html">Grumio</a></li></ol></div>
 <div class="earlylife">
 <h2> <strong> <u>Branches</u></strong></h2> <p>
