--- a/yung lean.html
+++ b/yung lean.html
@@ -16,7 +16,9 @@
   <li><a href="crime.html"> Crimefest; A holiday of Almir</a></li>
   <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
+<li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
 <li> <a href="grumio.html">Grumio</a></li></ol></div>
+
 
 <div class="earlylife"><h2> <u> Early life </u> </h2>
 <p> Yung lean is a sort of demigod. Born half human, half DLC. Yung lean is the son of Almir Listo. He was born to a virgin mother, much like jesus.
