--- a/A prayer.html
+++ b/A prayer.html
@@ -15,6 +15,7 @@
 <li><a href="crime.html"> Crimefest; A holiday of Almir</a></li>
 <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
+<li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> </ol>
 <li> <a href="grumio.html">Grumio</a></li></ol></div>
 
 <div class= "prayer">
