--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -13,7 +13,8 @@
 <li><a href= "crime.html"> Crimefest; A holiday of Almir</a></li>  
 <li><a href= "gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href= "thesales.html">The Sales; A holiday of Gaben</a></li>
-<li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> </ol>
+<li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
+<li> <a href="grumio.html">Grumio</a></li></ol>
 <h2><u> <strong> Other Prophets </strong></u></h2> <ol> 
 <li> <a href="grumio.html">Grumio</a></li>
 <li> <a href="swifto.html"> Doctor Swifto (not done)</a></li>
