--- a/crime.html
+++ b/crime.html
@@ -16,6 +16,7 @@
   <li><a href= "crime.html"> Crimefest; A holiday of Almir</a></li>  
   <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
+<li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
 <li> <a href="grumio.html">Grumio</a></li></ol></div>
 <div class="info2"><p><h3> Crimefest is a holiday celebrating the worship of Almir, and the life of Yung Lean. 
 It is a holiday that lasts several weeks in October. During crimefest, 
