--- a/godd.html
+++ b/godd.html
@@ -15,6 +15,7 @@
   <li><a href="crime.html"> Crimefest; A holiday of Almir</a></li>
   <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
+<li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
 <li> <a href="grumio.html">Grumio</a></li></ol></div>
 <div class="godd"> Godd Howard was a poor sheperd in Bethesda, Maryland USA. He was inpregnated with Almir's child, "Yung Lean". Almir told Godd Howard that he is 
 pregnant with a holy child, and that he would be the tightest human to ever live. Almir told Godd Howard that he is to raise this child and that 
