--- a/grumio.html
+++ b/grumio.html
@@ -15,6 +15,7 @@
 <li><a href="crime.html"> Crimefest; A holiday of Almir</a></li>
 <li><a href="gaben.html">Gabe Noodle and the Loosest Crew</a></li>
 <li> <a href="thesales.html">The Sales; A holiday of Gaben</a></li>
+<li> <a href="prophets.html"> Prophets and Branches of Tightism </a> </li> 
 <li> <a href="grumio.html">Grumio</a></li></ol></div>
 <div class="earlylife">
 <h2> <strong> <u>Grumio</u></strong></h2> <p> Grumio is a pivotal character in Almirish Mythology. In 79 AD, Grumio was one of the Tightest humans alive. This is only 79 years 
